# semantic

./: .gitignore  cabal.project  hie.yaml
semantic/: semantic.cabal
semantic-ast/: BUILD.bazel
semantic-ast/app/: Main.hs
semantic-wgsl/: BUILD.bazel  CHANGELOG.md  LICENSE  semantic-wgsl.cabal
semantic-wgsl/src/Language/: Wgsl.hs
semantic-wgsl/src/Language/Wgsl/: AST.hs  Grammar.hs  Tags.hs
